prevent arrows from wrapping. 22px fonts-size on h2.

--- a/web/sites/default/themes/ubnext/less/front-page-openinghours.less
+++ b/web/sites/default/themes/ubnext/less/front-page-openinghours.less
@@ -2,4 +2,11 @@
 	margin-top: 30px;
 	padding-top: 30px;
 	padding-bottom: 30px;
+
+	h2{
+		font-size: 22px;
+		@media (max-width: 992px){
+			font-size: 19px;
+		}
+	}
 }
