--- a/web/sites/default/themes/ubnext/less/lists.less
+++ b/web/sites/default/themes/ubnext/less/lists.less
@@ -2,6 +2,7 @@
 	.main-cms {
 		.ub-list-of-links {
 			a{
+
 				&::after{
 					font-family: "FontAwesome"; 
 					content: "\f061";
@@ -10,6 +11,7 @@
 		            left: 8px;
 		            display: inline-block;
 		            font-size: 12px;
+		            margin-right: -24px;
 				}
 			}
 		}
